<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/input_numbers"/>

    <EditText
        android:id="@+id/unos_1"
        android:hint="@string/input_numerator"
        android:layout_width="200dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:textColor="@color/colorPrimary"/>


    <EditText
        android:id="@+id/unos_2"
        android:hint="@string/input_denumerator"
        android:layout_width="200dp"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned" />

    <TextView
        android:id="@+id/result"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        android:id="@+id/op_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/perform_operation"/>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/send_content"/>

    <Button
        android:id="@+id/compose_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/compose_email"/>

</LinearLayout>